new ui lib-changeset

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+bun.lockb
 bun.ts
 src/global.css
 pkg-backup.txt
