--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,8 @@
     "jsx": "react-jsx",
     "lib": ["dom", "dom.iterable", "esnext"],
     "moduleDetection": "force",
-    "module": "ESNext",
-    "moduleResolution": "Bundler",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "resolveJsonModule": true,
     "allowArbitraryExtensions": true,
     "strict": true,
