--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "supalazy",
   "type": "module",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "UI components for Supabase Comments X",
   "author": "Mustaqim Arifin <mustaqim.arifin@gmail.com>",
   "license": "MIT",
@@ -79,7 +79,10 @@
   "dependencies": {
     "@headlessui/react": "^2.1.2",
     "@radix-ui/react-dialog": "^1.1.1",
-    "@radix-ui/react-dropdown-menu": "^2.1.1"
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-slot": "1.1.0",
+    "class-variance-authority": "^0.7.0"
+
   },
   "optionalDependencies": {
     "fsevents": "^2.3.3"
@@ -92,7 +95,6 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
-    "class-variance-authority": "^0.7.0",
     "copyfiles": "^2.4.1",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "9.7.0",
