--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "supalazy",
   "type": "module",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "UI components for Supabase Comments X",
   "author": "Mustaqim Arifin <mustaqim.arifin@gmail.com>",
   "license": "MIT",
@@ -63,7 +63,7 @@
   ],
   "scripts": {
     "clean": "rimraf dist/",
-    "build": "vite build",
+    "build": "bun clean && rollup -c",
     "lint": "eslint . --fix --cache --cache-location eslintcache",
     "format": "bun prettier --write . --ignore-path .gitignore",
     "ci:version": "changeset version",
@@ -82,34 +82,42 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-slot": "1.1.0",
     "class-variance-authority": "^0.7.0"
-
   },
   "optionalDependencies": {
     "fsevents": "^2.3.3"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.23.2",
+    "@babel/core": "^7.24.9",
+    "@babel/plugin-transform-runtime": "^7.24.7",
+    "@babel/preset-env": "^7.24.8",
+    "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
+    "@babel/runtime": "^7.24.8",
     "@changesets/cli": "^2.27.7",
     "@eslint-react/eslint-plugin": "^1.5.30",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^26.0.1",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@types/node": "^20.14.11",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
-    "copyfiles": "^2.4.1",
     "cz-conventional-changelog": "^3.3.0",
+    "esbuild": "^0.23.0",
     "eslint": "9.7.0",
     "eslint-plugin-format": "^0.1.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.9",
-    "lightningcss": "^1.25.1",
     "rimraf": "^6.0.1",
+    "rollup": "^4.19.0",
+    "rollup-plugin-esbuild": "^6.1.1",
+    "rollup-plugin-postcss": "^4.0.2",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.5.4",
-    "typescript-plugin-css-modules": "^5.1.0",
-    "vite": "^5.3.4",
-    "vite-plugin-dts": "^4.0.0-beta.1",
-    "vite-plugin-lib-inject-css": "^2.1.1",
-    "vite-plugin-optimize-css-modules": "^1.1.0"
+    "typescript-plugin-css-modules": "^5.1.0"
   },
   "browserslist": "> 0.25%, not dead",
   "release": {
